Day 37 : ArrayList Practice : removing element